tests/fsharp/typecheck/sigs/neg41.bsl

neg41.fs(2,20,3,1): parse error FS0010: Incomplete structured construct at or before this point in definition. Expected '=' or other token.
