tests/fsharp/typecheck/sigs/neg41.fs
namespace Neg41 
module Neg41Module
type X = A | B
